# noty

./: .gitignore  README.md  README.zh-CN.md  components.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-07-13-webdav-sync.md
docs/superpowers/specs/: 2026-07-13-webdav-sync-design.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  llm.rs  main.rs  secrets.rs
src-tauri/src/sync/: engine.rs  mod.rs  state.rs  webdav.rs
src-tauri/src/vault/: frontmatter.rs  fs_ops.rs  mod.rs  search.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/[note]/: page.tsx
src/components/: VaultPicker.tsx  theme-provider.tsx
src/components/AiPanel/: index.tsx
src/components/AppBar/: index.tsx
src/components/Directory/: Header.tsx  List.tsx  TitleList.tsx  TitleListItem.tsx  index.tsx
src/components/Editor/: Breadcrumb.tsx  NoteEditor.tsx  SourceEditor.tsx  TabBar.tsx  Toolbar.tsx  index.tsx
src/components/Editor/SlashCommand/: CommandMenu.tsx  index.ts  items.ts
src/components/Editor/__tests__/: markdown-roundtrip.test.ts
src/components/EditorSection/: Editor.tsx  editor.module.css  index.tsx
src/components/FileTree/: TreeItem.tsx  index.tsx
src/components/RightPanel/: index.tsx
src/components/SearchBar/: index.tsx
src/components/Settings/: SettingsDialog.tsx
src/components/StatusBar/: index.tsx
src/components/UI/: ScrollArea.tsx
src/components/ui/: scroll-area.tsx
src/lib/: data.ts  data2.ts  tauri.ts  words.ts
src/lib/__tests__/: words.test.ts
src/store/: AppSettingStore.ts  EditorStore.ts  LlmStore.ts  NoteStore.ts  SettingsStore.ts  SyncStore.ts  UiStore.ts  VaultStore.ts
src/store/__tests__/: SyncStore.test.ts
src/types/: notes.d.ts  settings.d.ts  vault.ts
src/utils/: constants.js
