[package]
name = "noty"
version = "0.1.0"
description = "A Tauri Note App"
authors = ["liming"]
license = ""
repository = ""
default-run = "noty"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [ "fs-rename-file", "fs-create-dir", "fs-read-file", "fs-exists", "fs-write-file", "fs-read-dir", "fs-remove-file", "path-all", "dialog-save", "clipboard-write-text", "window-set-fullscreen", "window-set-title", "window-set-ignore-cursor-events", "window-minimize", "window-maximize", "window-unminimize", "window-unmaximize", "window-show", "window-hide", "window-close", "window-start-dragging"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
