[package]
name = "noty"
version = "0.0.0"
description = "A Tauri App"
authors = ["catsonkeyboard"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "fs-write-file", "window-maximize", "window-unminimize", "window-set-title", "window-set-fullscreen", "window-minimize", "fs-read-dir", "clipboard-write-text", "window-show", "window-unmaximize", "window-start-dragging", "window-close", "fs-rename-file", "window-set-ignore-cursor-events", "window-hide", "fs-exists", "fs-create-dir", "dialog-save", "fs-remove-file", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
