[package]
name = "noty"
version = "0.0.0"
description = "A Tauri App"
authors = ["catsonkeyboard"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "noty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
walkdir = "2"
serde_yaml = "0.9"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
keyring = "4"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
futures-util = "0.3.32"
tokio-util = "0.7.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.27.0"
